...
 * go back to the login activity.
 */
class IntentExtrasErrorActivity : ComponentActivity() {
    class TestTags {
        class TextFields {
            companion object {
                const val ERROR_MESSAGE_FIELD = "errorMessage"
            }
        }
        class Buttons {
            companion object {
                const val GO_TO_LOGIN_BUTTON = "goToLoginButton"
            }
        }
    }

    private val GENERIC_ERROR_MESSAGE = "An error occurred. Please return to the login page and retry."

...
